apps/ai/langfuse/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: ai
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - "langfuse.lab.the-lab.zone"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: langfuse-web        # confirme: kubectl get svc -n ai
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
